Include a way to add a decklist
